--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "Gblog",
+  "name": "@zjhou/gbbblog",
   "version": "0.0.1",
-  "private": true,
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "description": "gmail api 2 blog api",
   "main": "index.js",
   "repository": "git@github.com:zjhou/Gblog.git",
@@ -10,6 +12,7 @@
   "dependencies": {
     "googleapis": "39",
     "lodash": "^4.17.15",
+    "micro-cors": "^0.1.1",
     "vercel": "^19.1.1"
   }
 }
